fix(nav): Remove the Navbar list visible on scroll

--- a/style/main.css
+++ b/style/main.css
@@ -146,7 +146,7 @@ section:nth-child(n + 2) {
     #curriculumVitae{
         .container{
             padding: 80px;
-            margin-top: 80px;
+            margin-top: 105px;
             margin-bottom: 80px;
         }
 
